<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OneTimePaymentMain">

    <TextView
        android:id="@+id/txtOTFromAccount"
        android:layout_width="107dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/txtOTFromAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtOTServiceProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:text="@string/txtOTServiceProvider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOTFromAccount" />

    <TextView
        android:id="@+id/txtOTAccNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:text="@string/txtOTAccNum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOTServiceProvider" />

    <TextView
        android:id="@+id/txtOTAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="84dp"
        android:text="@string/txtOTAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOTAccNum" />

    <TextView
        android:id="@+id/txtOTDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="96dp"
        android:text="@string/txtOTDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOTAmount" />

    <Button
        android:id="@+id/btnOTPay"
        android:layout_width="145dp"
        android:layout_height="76dp"
        android:text="@string/btnOTPay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="242dp"
        android:layout_height="49dp"
        android:layout_marginTop="48dp"
        android:text="@string/txtOTDownload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOTDate" />

</androidx.constraintlayout.widget.ConstraintLayout>