<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manageFavouriteBills">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:background="@drawable/topbarrectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoTrnasfer"
            android:layout_width="227.5dp"
            android:layout_height="70dp"
            android:layout_marginStart="137dp"
            android:contentDescription="@string/logo_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/banklogo" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/hamburger_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_dehaze_24"
            app:tint="@color/black"
            tools:ignore="VectorDrawableCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:background="@drawable/topicbarrectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="25dp"
            android:layout_height="27dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/backNav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/txtOTConfirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/manageFavBills"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="229dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/beneficarydetailsbackground"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="40dp"
            android:paddingTop="10dp"
            android:text="@string/Benefiacry_Account_Name_Tag"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:text="@string/exampleNameBeneficary1"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="40dp"
            android:text="@string/BeneficaryAccountNumberTag"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:text="@string/BeneficaryAccountNumberVal"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="40dp"
            android:text="@string/exampleBeneficaryBankTag"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:text="@string/exampleBeneficaryBankAddress"
            android:textColor="#000000" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button2"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/deleteTag"
                android:textColor="#FFFFFF"
                app:backgroundTint="#93182F"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button3"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/editButtonTag"
                android:textColor="#FFFFFF"
                app:backgroundTint="#147FCD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="229dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/beneficarydetailsbackground"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView4_2nd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingStart="40dp"
            android:paddingTop="10dp"
            android:text="@string/Benefiacry_Account_Name_Tag"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView5_2nd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:text="@string/exampleNameBeneficary1"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView6_2nd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="40dp"
            android:text="@string/BeneficaryAccountNumberTag"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView7_2nd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:text="@string/BeneficaryAccountNumberVal"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView8_2nd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="40dp"
            android:text="@string/exampleBeneficaryBankTag"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView9_2nd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:text="@string/exampleBeneficaryBankAddress"
            android:textColor="#000000" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button2_2nd"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/deleteTag"
                android:textColor="#FFFFFF"
                app:backgroundTint="#93182F"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button3_2nd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button3_2nd"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:text="@string/editButtonTag"
                android:textColor="#FFFFFF"
                app:backgroundTint="#147FCD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button2_2nd" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <Button
        android:id="@+id/AddNewBenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="80dp"
        android:text="@string/AddNewBillerTag"
        android:textColor="#FFFFFF"
        app:backgroundTint="#93182F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>